--- a/Kismat App/Views/ViewControllers/ProfileSetup/Xibs/ProfileTVCell.xib
+++ b/Kismat App/Views/ViewControllers/ProfileSetup/Xibs/ProfileTVCell.xib
@@ -46,21 +46,25 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
-                                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tooltip_icon" translatesAutoresizingMaskIntoConstraints="NO" id="jqp-cK-Gva">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Q9-Dv-z8W">
                                         <rect key="frame" x="314" y="22" width="15" height="15"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="15" id="CIr-qm-lC7"/>
-                                            <constraint firstAttribute="height" constant="14.999999999999972" id="u4A-PR-jvE"/>
+                                            <constraint firstAttribute="width" constant="15" id="CCx-qj-V1c"/>
+                                            <constraint firstAttribute="height" constant="15" id="VXM-rn-67E"/>
                                         </constraints>
-                                    </imageView>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="tooltip_icon"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" name="Cell BG Base Grey"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="353" id="0ds-y9-RVH"/>
-                                    <constraint firstAttribute="bottom" secondItem="jqp-cK-Gva" secondAttribute="bottom" constant="22.999999999999879" id="JR2-t1-tue"/>
-                                    <constraint firstItem="jqp-cK-Gva" firstAttribute="leading" secondItem="oPc-B4-0kB" secondAttribute="trailing" constant="14" id="cJG-Nj-GJO"/>
+                                    <constraint firstItem="1Q9-Dv-z8W" firstAttribute="top" secondItem="4ET-CA-03u" secondAttribute="top" constant="22" id="I7f-VW-mk0"/>
+                                    <constraint firstAttribute="bottom" secondItem="1Q9-Dv-z8W" secondAttribute="bottom" constant="22.999999999999993" id="J4Z-oX-CWR"/>
+                                    <constraint firstAttribute="trailing" secondItem="1Q9-Dv-z8W" secondAttribute="trailing" constant="24" id="eYw-60-6hP"/>
                                     <constraint firstItem="oPc-B4-0kB" firstAttribute="centerX" secondItem="4ET-CA-03u" secondAttribute="centerX" constant="-26.5" id="enp-nK-Sp0"/>
-                                    <constraint firstItem="jqp-cK-Gva" firstAttribute="top" secondItem="4ET-CA-03u" secondAttribute="top" constant="22.000000000000142" id="fGS-r2-Mbr"/>
+                                    <constraint firstItem="1Q9-Dv-z8W" firstAttribute="leading" secondItem="oPc-B4-0kB" secondAttribute="trailing" constant="14" id="hgu-Vv-1dA"/>
                                     <constraint firstAttribute="height" constant="60" id="jrw-IQ-sZY"/>
                                     <constraint firstItem="oPc-B4-0kB" firstAttribute="centerY" secondItem="4ET-CA-03u" secondAttribute="centerY" id="s4K-PP-dpZ"/>
                                 </constraints>
@@ -96,7 +100,7 @@
                                         <rect key="frame" x="3" y="4" width="84" height="52"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowtriangle.down.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zxc-Qc-EHG">
-                                                <rect key="frame" x="62.333333333333321" y="22.333333333333332" width="16.666666666666664" height="11.333333333333346"/>
+                                                <rect key="frame" x="62.333333333333321" y="22.333333333333332" width="16.666666666666664" height="11.333333333333332"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="tintColor" name="BaseBlack"/>
                                                 <constraints>
@@ -213,19 +217,19 @@
                 <outlet property="countryPickerView" destination="4Is-bo-0PU" id="Dpu-Mg-y8O"/>
                 <outlet property="generalTF" destination="oPc-B4-0kB" id="Qcc-AV-qvd"/>
                 <outlet property="generalTFView" destination="4ET-CA-03u" id="hpo-7q-nSl"/>
-                <outlet property="imageIconIV" destination="jqp-cK-Gva" id="EKm-TR-WT5"/>
                 <outlet property="numberTF" destination="lEa-z3-zuD" id="PMz-kn-qva"/>
                 <outlet property="numberView" destination="ob9-8x-pD3" id="dKN-3N-VdS"/>
+                <outlet property="toolTipBtn" destination="1Q9-Dv-z8W" id="cHf-gL-fNp"/>
             </connections>
             <point key="canvasLocation" x="49.618320610687022" y="54.577464788732399"/>
         </tableViewCell>
     </objects>
     <designables>
         <designable name="lEa-z3-zuD">
-            <size key="intrinsicContentSize" width="52.333333333333336" height="17"/>
+            <size key="intrinsicContentSize" width="55.666666666666664" height="17"/>
         </designable>
         <designable name="oPc-B4-0kB">
-            <size key="intrinsicContentSize" width="52.333333333333336" height="17"/>
+            <size key="intrinsicContentSize" width="55.666666666666664" height="17"/>
         </designable>
     </designables>
     <resources>
