--- a/Kismat App/MainViewController/Xibs/MixHeaderTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/MixHeaderTVCell.xib
@@ -77,7 +77,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </button>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rgH-vW-BiW" customClass="CustomToggleButton" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="283" y="0.0" width="51" height="31"/>
+                                        <rect key="frame" x="295.75" y="7.75" width="27.5" height="15.5"/>
                                         <color key="onTintColor" name="Secondary Grey"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="scale">
@@ -117,7 +117,7 @@
                                         <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                                         <color key="tintColor" name="Success"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="Read All">
+                                        <state key="normal" title="Read all">
                                             <color key="titleColor" name="Success"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
@@ -282,28 +282,28 @@
     </objects>
     <designables>
         <designable name="0ir-Q9-gZ4">
-            <size key="intrinsicContentSize" width="36" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="39.333333333333336" height="21.333333333333332"/>
         </designable>
         <designable name="3PY-qB-7mJ">
-            <size key="intrinsicContentSize" width="36" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="30.666666666666668" height="16.666666666666668"/>
         </designable>
         <designable name="5Zd-77-ahs">
             <size key="intrinsicContentSize" width="48" height="48"/>
         </designable>
         <designable name="ba2-uk-kVn">
-            <size key="intrinsicContentSize" width="56" height="29"/>
+            <size key="intrinsicContentSize" width="63" height="31"/>
         </designable>
         <designable name="cx2-Bl-JDe">
-            <size key="intrinsicContentSize" width="14.333333333333334" height="22"/>
+            <size key="intrinsicContentSize" width="14.333333333333334" height="19"/>
         </designable>
         <designable name="jLp-rH-ZeA">
-            <size key="intrinsicContentSize" width="116" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="99.666666666666671" height="16.666666666666668"/>
         </designable>
         <designable name="rgH-vW-BiW">
             <size key="intrinsicContentSize" width="49" height="31"/>
         </designable>
         <designable name="v3c-Ag-h76">
-            <size key="intrinsicContentSize" width="49.666666666666664" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="40.333333333333336" height="16.666666666666668"/>
         </designable>
     </designables>
     <resources>
