--- a/Kismat App/MainViewController/Xibs/StatusTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/StatusTVCell.xib
@@ -63,7 +63,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" name="Cell BG Base Grey"/>
+                                <color key="backgroundColor" name="BG Base White"/>
                                 <constraints>
                                     <constraint firstItem="Lj0-au-gib" firstAttribute="leading" secondItem="7fo-Gn-aRQ" secondAttribute="trailing" constant="6" id="2bs-4h-rPZ"/>
                                     <constraint firstItem="7fo-Gn-aRQ" firstAttribute="leading" secondItem="hts-ky-42P" secondAttribute="trailing" constant="6" id="3Fo-fA-kb6"/>
@@ -85,13 +85,13 @@
                                         <color key="value" name="Cell BG Base Grey"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
-                                        <size key="value" width="1.3" height="5"/>
+                                        <size key="value" width="3" height="5"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
-                                        <real key="value" value="5"/>
+                                        <real key="value" value="3"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
-                                        <real key="value" value="3"/>
+                                        <real key="value" value="1.3"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
@@ -130,6 +130,9 @@
     <resources>
         <image name="clock.fill" catalog="system" width="128" height="123"/>
         <image name="wifi" catalog="system" width="128" height="90"/>
+        <namedColor name="BG Base White">
+            <color red="0.9570000171661377" green="0.9570000171661377" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Base White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
