--- a/Kismat App/Storyboard/Base.lproj/Main.storyboard
+++ b/Kismat App/Storyboard/Base.lproj/Main.storyboard
@@ -1800,9 +1800,9 @@ this email.</string>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xj8-DJ-5BY" customClass="RoundCornerView" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="34" y="184" width="325" height="143"/>
+                                        <rect key="frame" x="17" y="184" width="359" height="143"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xbv-4R-o9Y" customClass="RoundCornerButton" customModule="Kismmet" customModuleProvider="target">
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xbv-4R-o9Y" customClass="RoundCornerButton" customModule="Kismmet" customModuleProvider="target">
                                                 <rect key="frame" x="8" y="29" width="30" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="MUl-Uu-QlI"/>
@@ -1820,10 +1820,10 @@ this email.</string>
                                                 </userDefinedRuntimeAttributes>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Free Plan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nIQ-VS-jss" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                                <rect key="frame" x="50" y="33" width="267" height="21"/>
+                                                <rect key="frame" x="15" y="38" width="330" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="21" id="d88-93-ELC"/>
-                                                    <constraint firstAttribute="width" constant="267" id="wMf-Gr-LeQ"/>
+                                                    <constraint firstAttribute="width" constant="330" id="wMf-Gr-LeQ"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
@@ -1840,10 +1840,10 @@ this email.</string>
                                                 </userDefinedRuntimeAttributes>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Discover and connect with unlimited users per month." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JxZ-YY-3L0" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                                <rect key="frame" x="50" y="50" width="267" height="42"/>
+                                                <rect key="frame" x="15" y="55" width="330" height="42"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="42" id="3qh-C5-2Sm"/>
-                                                    <constraint firstAttribute="width" constant="267" id="d4u-9U-12u"/>
+                                                    <constraint firstAttribute="width" constant="330" id="d4u-9U-12u"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
@@ -1860,9 +1860,9 @@ this email.</string>
                                                 </userDefinedRuntimeAttributes>
                                             </label>
                                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Can view 15 profiles per month." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZM-Ne-b6O" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                                <rect key="frame" x="50" y="93" width="267" height="200"/>
+                                                <rect key="frame" x="15" y="80" width="330" height="200"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="267" id="12o-gk-QUk"/>
+                                                    <constraint firstAttribute="width" constant="330" id="12o-gk-QUk"/>
                                                     <constraint firstAttribute="height" constant="200" id="u7V-jo-oIx"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -1882,17 +1882,18 @@ this email.</string>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="325" id="5r0-tR-lJ0"/>
-                                            <constraint firstItem="nIQ-VS-jss" firstAttribute="leading" secondItem="xbv-4R-o9Y" secondAttribute="trailing" constant="12" id="6i7-A1-Vuv"/>
-                                            <constraint firstItem="OZM-Ne-b6O" firstAttribute="top" secondItem="JxZ-YY-3L0" secondAttribute="bottom" constant="1" id="8aT-wi-2lE"/>
+                                            <constraint firstAttribute="width" constant="359" id="5r0-tR-lJ0"/>
+                                            <constraint firstItem="OZM-Ne-b6O" firstAttribute="top" secondItem="JxZ-YY-3L0" secondAttribute="bottom" constant="-17" id="8aT-wi-2lE"/>
                                             <constraint firstItem="xbv-4R-o9Y" firstAttribute="leading" secondItem="Xj8-DJ-5BY" secondAttribute="leading" constant="8" id="DGr-fK-CpV"/>
                                             <constraint firstItem="xbv-4R-o9Y" firstAttribute="top" secondItem="Xj8-DJ-5BY" secondAttribute="top" constant="29" id="POb-DX-tHB"/>
-                                            <constraint firstItem="JxZ-YY-3L0" firstAttribute="leading" secondItem="xbv-4R-o9Y" secondAttribute="trailing" constant="12" id="XEF-eE-Rya"/>
-                                            <constraint firstItem="nIQ-VS-jss" firstAttribute="top" secondItem="Xj8-DJ-5BY" secondAttribute="top" constant="33" id="ae8-2W-1BC"/>
-                                            <constraint firstAttribute="trailing" secondItem="OZM-Ne-b6O" secondAttribute="trailing" constant="8" id="mBZ-ON-5aM"/>
+                                            <constraint firstAttribute="trailing" secondItem="nIQ-VS-jss" secondAttribute="trailing" constant="14" id="Vsw-k0-Y0l"/>
+                                            <constraint firstItem="JxZ-YY-3L0" firstAttribute="leading" secondItem="xbv-4R-o9Y" secondAttribute="trailing" constant="-23" id="XEF-eE-Rya"/>
+                                            <constraint firstItem="nIQ-VS-jss" firstAttribute="top" secondItem="Xj8-DJ-5BY" secondAttribute="top" constant="38" id="ae8-2W-1BC"/>
+                                            <constraint firstAttribute="trailing" secondItem="OZM-Ne-b6O" secondAttribute="trailing" constant="14" id="mBZ-ON-5aM"/>
+                                            <constraint firstItem="nIQ-VS-jss" firstAttribute="leading" secondItem="Xj8-DJ-5BY" secondAttribute="leading" constant="15" id="pGS-Px-ywC"/>
                                             <constraint firstAttribute="height" constant="143" id="rBW-lR-XrF"/>
                                             <constraint firstItem="JxZ-YY-3L0" firstAttribute="top" secondItem="nIQ-VS-jss" secondAttribute="bottom" constant="-4" id="rdb-RA-onK"/>
-                                            <constraint firstItem="OZM-Ne-b6O" firstAttribute="leading" secondItem="Xj8-DJ-5BY" secondAttribute="leading" constant="50" id="sHA-Db-H34"/>
+                                            <constraint firstItem="OZM-Ne-b6O" firstAttribute="leading" secondItem="Xj8-DJ-5BY" secondAttribute="leading" constant="15" id="sHA-Db-H34"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -2141,14 +2142,14 @@ this email.</string>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="ii4-nh-bG8" secondAttribute="trailing" constant="132" id="0Sr-gC-zun"/>
                                     <constraint firstItem="xxm-9G-y2P" firstAttribute="leading" secondItem="yeF-7t-xHF" secondAttribute="leading" constant="34" id="5o9-n7-fYw"/>
-                                    <constraint firstItem="Xj8-DJ-5BY" firstAttribute="leading" secondItem="yeF-7t-xHF" secondAttribute="leading" constant="34" id="8am-xC-fR7"/>
+                                    <constraint firstItem="Xj8-DJ-5BY" firstAttribute="leading" secondItem="yeF-7t-xHF" secondAttribute="leading" constant="17" id="8am-xC-fR7"/>
                                     <constraint firstAttribute="trailing" secondItem="xxm-9G-y2P" secondAttribute="trailing" constant="34" id="BWj-31-imL"/>
                                     <constraint firstItem="s5i-97-5OF" firstAttribute="leading" secondItem="yeF-7t-xHF" secondAttribute="leading" constant="17" id="NTq-I7-tby"/>
                                     <constraint firstItem="s5i-97-5OF" firstAttribute="top" secondItem="yeF-7t-xHF" secondAttribute="top" constant="65" id="TZH-IH-x5j"/>
                                     <constraint firstItem="ii4-nh-bG8" firstAttribute="leading" secondItem="yeF-7t-xHF" secondAttribute="leading" constant="132" id="Xf2-UY-y6n"/>
                                     <constraint firstItem="Xj8-DJ-5BY" firstAttribute="top" secondItem="s5i-97-5OF" secondAttribute="bottom" constant="69" id="Ycm-p0-46R"/>
                                     <constraint firstItem="ii4-nh-bG8" firstAttribute="top" secondItem="s5i-97-5OF" secondAttribute="bottom" constant="49" id="aT6-PD-QVd"/>
-                                    <constraint firstAttribute="trailing" secondItem="Xj8-DJ-5BY" secondAttribute="trailing" constant="34" id="hxH-Fq-Hs3"/>
+                                    <constraint firstAttribute="trailing" secondItem="Xj8-DJ-5BY" secondAttribute="trailing" constant="17" id="hxH-Fq-Hs3"/>
                                     <constraint firstAttribute="trailing" secondItem="s5i-97-5OF" secondAttribute="trailing" constant="17" id="zX3-ol-taV"/>
                                 </constraints>
                             </view>
