--- a/Kismat App/Storyboard/Base.lproj/Main.storyboard
+++ b/Kismat App/Storyboard/Base.lproj/Main.storyboard
@@ -1177,10 +1177,10 @@ this email.</string>
                                         <rect key="frame" x="20" y="169" width="353" height="60"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Link it" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Fkw-EZ-gfF" customClass="FormTextField" customModule="Kismmet" customModuleProvider="target">
-                                                <rect key="frame" x="31" y="0.0" width="322" height="60"/>
+                                                <rect key="frame" x="31" y="0.0" width="285" height="60"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="322" id="5XL-Dy-nyX"/>
+                                                    <constraint firstAttribute="width" constant="285" id="5XL-Dy-nyX"/>
                                                     <constraint firstAttribute="height" constant="60" id="W65-xL-UMC"/>
                                                 </constraints>
                                                 <color key="textColor" name="Text grey"/>
@@ -1252,7 +1252,7 @@ this email.</string>
                                             <constraint firstAttribute="bottom" secondItem="vAM-Zs-drD" secondAttribute="bottom" constant="23" id="XNY-8y-h7n"/>
                                             <constraint firstItem="Fkw-EZ-gfF" firstAttribute="top" secondItem="s2d-eg-MkL" secondAttribute="top" id="YNG-AG-dd5"/>
                                             <constraint firstItem="Fkw-EZ-gfF" firstAttribute="leading" secondItem="s2d-eg-MkL" secondAttribute="leading" constant="31" id="eGA-Sc-ZvZ"/>
-                                            <constraint firstAttribute="trailing" secondItem="Fkw-EZ-gfF" secondAttribute="trailing" id="zHq-7U-Tp6"/>
+                                            <constraint firstAttribute="trailing" secondItem="Fkw-EZ-gfF" secondAttribute="trailing" constant="37" id="zHq-7U-Tp6"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -1272,7 +1272,7 @@ this email.</string>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Increase your connections by linking accounts kgkg" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eku-i5-B1A" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Increase your connections by linking accounts kgkg" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eku-i5-B1A" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="21" y="8" width="352" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="LlD-nI-hde"/>
@@ -1311,7 +1311,7 @@ this email.</string>
                                     <constraint firstItem="KaR-Mc-BMB" firstAttribute="height" secondItem="hzv-hu-A8p" secondAttribute="height" id="FLF-3g-ZR4"/>
                                     <constraint firstAttribute="trailing" secondItem="Cxs-Rj-zIi" secondAttribute="trailing" constant="20" symbolic="YES" id="IDY-W4-KeH"/>
                                     <constraint firstItem="KaR-Mc-BMB" firstAttribute="top" secondItem="Cxs-Rj-zIi" secondAttribute="bottom" constant="94" id="Ksb-8k-cZW"/>
-                                    <constraint firstItem="eku-i5-B1A" firstAttribute="top" secondItem="1qG-Fq-dO6" secondAttribute="top" constant="24" id="Lhz-he-DJk"/>
+                                    <constraint firstItem="eku-i5-B1A" firstAttribute="top" secondItem="1qG-Fq-dO6" secondAttribute="top" constant="8" id="Lhz-he-DJk"/>
                                     <constraint firstAttribute="trailing" secondItem="6h3-s9-8KE" secondAttribute="trailing" constant="20" symbolic="YES" id="Nb1-2K-gdv"/>
                                     <constraint firstItem="Cxs-Rj-zIi" firstAttribute="top" secondItem="MDZ-WK-eaA" secondAttribute="bottom" constant="11" id="XEY-VB-uZH"/>
                                     <constraint firstAttribute="bottom" secondItem="KaR-Mc-BMB" secondAttribute="bottom" constant="20" id="Xcm-qQ-nEm"/>
@@ -5540,10 +5540,10 @@ Thank you</string>
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray3Color">
-            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
