--- a/Kismat App/Storyboard/Base.lproj/Main.storyboard
+++ b/Kismat App/Storyboard/Base.lproj/Main.storyboard
@@ -4286,8 +4286,8 @@ You will not be able to use this account in the future.
                                                     <constraint firstAttribute="width" constant="323" id="OHt-fe-uDz"/>
                                                     <constraint firstAttribute="height" constant="122" id="q4T-2o-RCS"/>
                                                 </constraints>
-                                                <string key="text">Thank you for being a valued user of Kismmet.
-We greatly appreciate your feedback and suggestions, which play a crucial role in shaping the future of our app.
+                                                <string key="text">Thank you for being a valued member of Kismmet.
+We sincerely appreciate your feedback and suggestions, which play a crucial role in shaping the future of our app.
 Feel free to reach out to us anytime at the following email address:
 </string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -4329,8 +4329,8 @@ Feel free to reach out to us anytime at the following email address:
                                                     <constraint firstAttribute="height" constant="79" id="KAH-Dg-fvQ"/>
                                                     <constraint firstAttribute="width" constant="323" id="zyG-BZ-Nh4"/>
                                                 </constraints>
-                                                <string key="text">Your input helps us enhance your experience! 
-Thank you</string>
+                                                <string key="text">Your input is invalueable to us.
+Thank you!</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -5264,7 +5264,7 @@ Thank you</string>
             <size key="intrinsicContentSize" width="74.333333333333329" height="20.333333333333332"/>
         </designable>
         <designable name="Il5-8r-mJd">
-            <size key="intrinsicContentSize" width="349.66666666666669" height="40.666666666666664"/>
+            <size key="intrinsicContentSize" width="230" height="40.666666666666664"/>
         </designable>
         <designable name="It5-3m-GYL">
             <size key="intrinsicContentSize" width="93" height="30"/>
@@ -5301,7 +5301,7 @@ Thank you</string>
             <size key="intrinsicContentSize" width="20" height="22"/>
         </designable>
         <designable name="NEW-Hu-HLT">
-            <size key="intrinsicContentSize" width="847" height="81.333333333333329"/>
+            <size key="intrinsicContentSize" width="862.33333333333337" height="81.333333333333329"/>
         </designable>
         <designable name="OZM-Ne-b6O">
             <size key="intrinsicContentSize" width="239.33333333333334" height="20.333333333333332"/>
